# Synastry

./: .gitignore  Synastry.py  pytest.ini  requirements-dev.txt  requirements.txt
core/: __init__.py  date_db.py  date_time.py  gtk_utils.py  main_window.py  periods_window.py  planets.py  utils.py  widgets.py
gcal/: gcal-context.h  gcal-debug.h  gcal-enum-types.c  gcal-enum-types.h  gcal-month-cell.c  gcal-month-cell.ui  gcal-month-popover.c  gcal-month-view.c  meson.build  views.gresource.xml
stubs/: genstubs.py  gtkstubs.py
tests/: __init__.py  test_date_db.py  test_date_time.py  test_main_window.py  test_planets.py
ui/: date_time.glade  main_window.glade  periods.glade
